--- a/style.css
+++ b/style.css
@@ -447,6 +447,23 @@ div.input ul.token-input-list-facebook {
 	height: 36px;
 	text-decoration: none;
 }
+.ficon.width_decrease {
+    background-position: -32px -75px;
+    width: 32px;
+    height: 32px;
+}
+.roundbutton span, .roundbutton_text span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+.ficon {
+    background: url(img/icons.gif) no-repeat;
+    display: inline-block;
+}
 #width_switcher.fixed {
 	position: fixed;
 	top: 3px;
